--- a/PinPongGame/PinPongGame/Debug/Makefile
+++ b/PinPongGame/PinPongGame/Debug/Makefile
@@ -40,6 +40,7 @@ C_SRCS +=  \
 ../ADC_driver.c \
 ../main.c \
 ../Memory_driver.c \
+../OLED_driver.c \
 ../UART_driver.c
 
 
@@ -53,24 +54,28 @@ OBJS +=  \
 ADC_driver.o \
 main.o \
 Memory_driver.o \
+OLED_driver.o \
 UART_driver.o
 
 OBJS_AS_ARGS +=  \
 ADC_driver.o \
 main.o \
 Memory_driver.o \
+OLED_driver.o \
 UART_driver.o
 
 C_DEPS +=  \
 ADC_driver.d \
 main.d \
 Memory_driver.d \
+OLED_driver.d \
 UART_driver.d
 
 C_DEPS_AS_ARGS +=  \
 ADC_driver.d \
 main.d \
 Memory_driver.d \
+OLED_driver.d \
 UART_driver.d
 
 OUTPUT_FILE_PATH +=PinPongGame.elf
@@ -102,6 +107,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./Memory_driver.o: .././Memory_driver.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\Atmel\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\Atmel\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "D:\Atmel\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./OLED_driver.o: .././OLED_driver.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)D:\Atmel\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\Atmel\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "D:\Atmel\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
