motor implementation dummy

--- a/PinPongGame/Node2Arduino/Debug/Makefile
+++ b/PinPongGame/Node2Arduino/Debug/Makefile
@@ -43,6 +43,7 @@ C_SRCS +=  \
 ../Device_Startup/system_sam3xa.c \
 ../IR_driver.c \
 ../main.c \
+../Motor_dirver.c \
 ../pwm.c \
 ../time.c \
 ../uart.c
@@ -60,6 +61,7 @@ Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
 IR_driver.o \
 main.o \
+Motor_dirver.o \
 pwm.o \
 time.o \
 uart.o
@@ -70,6 +72,7 @@ Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
 IR_driver.o \
 main.o \
+Motor_dirver.o \
 pwm.o \
 time.o \
 uart.o
@@ -80,6 +83,7 @@ Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
 IR_driver.d \
 main.d \
+Motor_dirver.d \
 pwm.d \
 time.d \
 uart.d
@@ -90,6 +94,7 @@ Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
 IR_driver.d \
 main.d \
+Motor_dirver.d \
 pwm.d \
 time.d \
 uart.d
@@ -140,6 +145,13 @@ Device_Startup/system_sam3xa.o: ../Device_Startup/system_sam3xa.c
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)D:\Atmel\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"D:\Atmel\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"D:\Atmel\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./Motor_dirver.o: .././Motor_dirver.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)D:\Atmel\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"D:\Atmel\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"D:\Atmel\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
