--- a/PinPongGame/Node2Arduino/Debug/Makefile
+++ b/PinPongGame/Node2Arduino/Debug/Makefile
@@ -41,6 +41,7 @@ C_SRCS +=  \
 ../can.c \
 ../Device_Startup/startup_sam3xa.c \
 ../Device_Startup/system_sam3xa.c \
+../Encoder_driver.c \
 ../IR_driver.c \
 ../main.c \
 ../Motor_dirver.c \
@@ -59,6 +60,7 @@ OBJS +=  \
 can.o \
 Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
+Encoder_driver.o \
 IR_driver.o \
 main.o \
 Motor_dirver.o \
@@ -70,6 +72,7 @@ OBJS_AS_ARGS +=  \
 can.o \
 Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
+Encoder_driver.o \
 IR_driver.o \
 main.o \
 Motor_dirver.o \
@@ -81,6 +84,7 @@ C_DEPS +=  \
 can.d \
 Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
+Encoder_driver.d \
 IR_driver.d \
 main.d \
 Motor_dirver.d \
@@ -92,6 +96,7 @@ C_DEPS_AS_ARGS +=  \
 can.d \
 Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
+Encoder_driver.d \
 IR_driver.d \
 main.d \
 Motor_dirver.d \
@@ -131,6 +136,13 @@ Device_Startup/startup_sam3xa.o: ../Device_Startup/startup_sam3xa.c
 	
 
 Device_Startup/system_sam3xa.o: ../Device_Startup/system_sam3xa.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)D:\Atmel\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"D:\Atmel\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"D:\Atmel\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./Encoder_driver.o: .././Encoder_driver.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)D:\Atmel\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"D:\Atmel\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"D:\Atmel\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
